tests/paczka1/fuzzy1/38370657.err
Error in line 2: kqWOXv S76 99,9
Error in line 4: 81PR38 A526 21,3
Error in line 8: 3FDJw8yMT S76 164,F
Error in line 19: QJhann2g A526 83,1
Error in line 16: BiEuRWHVl3X A566 49,4
Error in line 20: QJhann2g S76 93,2
Error in line 23: QJhann2g S73 46,1
Error in line 35: cm3OO2ZnlGU A526 88,4
Error in line 32: 3FDJw8yMT S73 25,8
Error in line 34: 81PR38 S73 45,7
